[gd_scene load_steps=36 format=3 uid="uid://ch28j8m53gs62"]

[ext_resource type="Script" path="res://Scenes/Main Menu.gd" id="1_0d4x1"]
[ext_resource type="Texture2D" uid="uid://44qgxmak7lki" path="res://UI/button-new-game-default.png" id="1_7seat"]
[ext_resource type="Texture2D" uid="uid://d32xluhi3j62u" path="res://UI/button-new-game-hovered.png" id="2_nf8ni"]
[ext_resource type="Texture2D" uid="uid://0bcjecvo1v3y" path="res://UI/button-stage-select-default.png" id="3_1rwh5"]
[ext_resource type="Texture2D" uid="uid://2t6w2hfmokvb" path="res://UI/logo.png" id="3_smqu4"]
[ext_resource type="Texture2D" uid="uid://utuexldurbc7" path="res://UI/button-stage-select-hovered.png" id="4_le0re"]
[ext_resource type="Texture2D" uid="uid://cx2wcorcrtfuq" path="res://UI/button-options-default.png" id="5_rriq8"]
[ext_resource type="Texture2D" uid="uid://dw5mq46w5xvgl" path="res://UI/button-options-hovered.png" id="6_xgpaq"]
[ext_resource type="Texture2D" uid="uid://bgtsh3383s08w" path="res://UI/button-exit-to-desktop-default.png" id="7_5c24k"]
[ext_resource type="Texture2D" uid="uid://ojgqlj4utm63" path="res://UI/button-exit-to-desktop-hovered.png" id="8_081b5"]
[ext_resource type="Texture2D" uid="uid://coo7jxygqfx00" path="res://UI/controls.png" id="8_ll6y6"]
[ext_resource type="Texture2D" uid="uid://m4vkyo4swsug" path="res://Tilemaps/golden-controls.png" id="9_8fgko"]
[ext_resource type="Texture2D" uid="uid://mtie715hnao7" path="res://UI/ui-frame.png" id="11_ockt5"]
[ext_resource type="Texture2D" uid="uid://g2fs5b2u8gmr" path="res://UI/button-castle-catacombs-default.png" id="12_5xerp"]
[ext_resource type="Texture2D" uid="uid://neko4x75uu0w" path="res://UI/button-music-default.png" id="12_stmi4"]
[ext_resource type="Texture2D" uid="uid://bhrsveyistnxc" path="res://UI/button-castle-catacombs-hovered.png" id="13_oopjj"]
[ext_resource type="Texture2D" uid="uid://cnfsh6427vaw0" path="res://UI/slider.png" id="13_qokcn"]
[ext_resource type="Texture2D" uid="uid://b0qt4jcs0mc0v" path="res://UI/tick.png" id="14_2xvy5"]
[ext_resource type="Texture2D" uid="uid://bf2134cc5jnb5" path="res://UI/button-courtyard-gardens-default.png" id="14_yjo4j"]
[ext_resource type="Texture2D" uid="uid://dphlox1gau1qj" path="res://UI/slider-bar.png" id="15_jbywv"]
[ext_resource type="Texture2D" uid="uid://b27edue073us8" path="res://UI/button-courtyard-gardens-hovered.png" id="15_q3ojd"]
[ext_resource type="Texture2D" uid="uid://bn5mtis2ltieg" path="res://UI/button-library-archives-default.png" id="16_byc01"]
[ext_resource type="Texture2D" uid="uid://bgec10pnbbloi" path="res://UI/button-sfx-default.png" id="16_hr7pp"]
[ext_resource type="Texture2D" uid="uid://bpkhjtgm6sbxy" path="res://UI/button-library-archives-hovered.png" id="17_rw5s1"]
[ext_resource type="Texture2D" uid="uid://cd4bgde2x0hy0" path="res://UI/button-armory-forge-default.png" id="18_m0fd8"]
[ext_resource type="Texture2D" uid="uid://bwtxqogwe1jxh" path="res://UI/button-back-default.png" id="19_lec1t"]
[ext_resource type="Texture2D" uid="uid://bxtb4oa0xn3kf" path="res://UI/button-armory-forge-hovered.png" id="19_o8ex1"]
[ext_resource type="Texture2D" uid="uid://bywutnlqm205h" path="res://UI/button-back-hovered.png" id="20_jtdhh"]
[ext_resource type="Texture2D" uid="uid://do2hxsvoiqkqa" path="res://Tilemaps/wasd_to_move.png" id="27_q05j2"]
[ext_resource type="Texture2D" uid="uid://ete6xf1rtldm" path="res://Tilemaps/space_to_jump.png" id="28_ars2s"]
[ext_resource type="Texture2D" uid="uid://u6sq8mko27ka" path="res://Tilemaps/c_to_pull.png" id="29_r6hki"]
[ext_resource type="PackedScene" uid="uid://vyl5mvnxw416" path="res://Scenes/parallax_background.tscn" id="32_a7rpd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_15ek7"]
texture = ExtResource("15_jbywv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ph72"]

[sub_resource type="Theme" id="Theme_0ul2w"]
HSlider/icons/grabber = ExtResource("13_qokcn")
HSlider/icons/grabber_highlight = ExtResource("13_qokcn")
HSlider/icons/tick = ExtResource("14_2xvy5")
HSlider/styles/grabber_area = SubResource("StyleBoxTexture_15ek7")
HSlider/styles/slider = SubResource("StyleBoxTexture_4ph72")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -280.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0d4x1")

[node name="main menu" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="main menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="main menu/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="NinePatchRect" type="NinePatchRect" parent="main menu/CenterContainer/MarginContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 130)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("11_ockt5")
patch_margin_left = 18
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18

[node name="CenterContainer" type="CenterContainer" parent="main menu/CenterContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="main menu/CenterContainer/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_smqu4")
stretch_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="new game" type="TextureButton" parent="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("1_7seat")
texture_hover = ExtResource("2_nf8ni")
stretch_mode = 3

[node name="stage select" type="TextureButton" parent="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("3_1rwh5")
texture_hover = ExtResource("4_le0re")
stretch_mode = 3

[node name="controls" type="TextureButton" parent="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("8_ll6y6")
texture_hover = ExtResource("9_8fgko")
stretch_mode = 3

[node name="options" type="TextureButton" parent="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("5_rriq8")
texture_hover = ExtResource("6_xgpaq")
stretch_mode = 3

[node name="exit to desktop" type="TextureButton" parent="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("7_5c24k")
texture_hover = ExtResource("8_081b5")
stretch_mode = 3

[node name="stage select" type="CanvasLayer" parent="."]
visible = false

[node name="CenterContainer" type="CenterContainer" parent="stage select"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="stage select/CenterContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="stage select/CenterContainer/MarginContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("11_ockt5")
region_rect = Rect2(0.162807, 0.0956631, 45.6741, 45.8092)
patch_margin_left = 26
patch_margin_top = 26
patch_margin_right = 26
patch_margin_bottom = 26

[node name="VBoxContainer" type="VBoxContainer" parent="stage select/CenterContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="stage select/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="TextureRect" type="TextureRect" parent="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer2"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_le0re")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="stage select/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 6

[node name="NinePatchRect" type="NinePatchRect" parent="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("11_ockt5")
patch_margin_left = 18
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18

[node name="CenterContainer" type="CenterContainer" parent="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="catacombs" type="TextureButton" parent="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("12_5xerp")
texture_hover = ExtResource("13_oopjj")
stretch_mode = 3

[node name="garden" type="TextureButton" parent="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("14_yjo4j")
texture_hover = ExtResource("15_q3ojd")
stretch_mode = 3

[node name="library" type="TextureButton" parent="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("16_byc01")
texture_hover = ExtResource("17_rw5s1")
stretch_mode = 3

[node name="forge" type="TextureButton" parent="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("18_m0fd8")
texture_hover = ExtResource("19_o8ex1")
stretch_mode = 3

[node name="Container" type="Container" parent="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="back" type="TextureButton" parent="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("19_lec1t")
texture_hover = ExtResource("20_jtdhh")
stretch_mode = 3

[node name="options" type="CanvasLayer" parent="."]
visible = false

[node name="CenterContainer" type="CenterContainer" parent="options"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="options/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 12

[node name="NinePatchRect" type="NinePatchRect" parent="options/CenterContainer/MarginContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("11_ockt5")
region_rect = Rect2(0.162807, 0.0956631, 45.6741, 45.8092)
patch_margin_left = 26
patch_margin_top = 26
patch_margin_right = 26
patch_margin_bottom = 26

[node name="VBoxContainer" type="VBoxContainer" parent="options/CenterContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="options/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40

[node name="TextureRect" type="TextureRect" parent="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer2"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("6_xgpaq")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="options/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 6

[node name="NinePatchRect" type="NinePatchRect" parent="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 130)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("11_ockt5")
patch_margin_left = 18
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18

[node name="MarginContainer" type="MarginContainer" parent="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="TextureRect2" type="TextureRect" parent="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource("16_hr7pp")

[node name="sfx slider" type="HSlider" parent="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer2" groups=["sfx slider"]]
texture_filter = 1
layout_mode = 2
theme = SubResource("Theme_0ul2w")
max_value = 1.0
step = 0.1
value = 0.4
tick_count = 11
ticks_on_borders = true

[node name="VBoxContainer" type="VBoxContainer" parent="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="TextureRect" type="TextureRect" parent="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource("12_stmi4")

[node name="music slider" type="HSlider" parent="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer" groups=["music slider"]]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_0ul2w")
max_value = 1.0
step = 0.1
value = 0.4
tick_count = 11
ticks_on_borders = true

[node name="back" type="TextureButton" parent="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("19_lec1t")
texture_hover = ExtResource("20_jtdhh")

[node name="controls" type="CanvasLayer" parent="."]
visible = false

[node name="CenterContainer" type="CenterContainer" parent="controls"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="controls/CenterContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="controls/CenterContainer/MarginContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("11_ockt5")
region_rect = Rect2(0.162807, 0.0956631, 45.6741, 45.8092)
patch_margin_left = 26
patch_margin_top = 26
patch_margin_right = 26
patch_margin_bottom = 26

[node name="VBoxContainer" type="VBoxContainer" parent="controls/CenterContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="controls/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="TextureRect" type="TextureRect" parent="controls/CenterContainer/MarginContainer/VBoxContainer/MarginContainer2"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("9_8fgko")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="controls/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 6

[node name="NinePatchRect" type="NinePatchRect" parent="controls/CenterContainer/MarginContainer/VBoxContainer/MarginContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("11_ockt5")
patch_margin_left = 18
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18

[node name="CenterContainer" type="CenterContainer" parent="controls/CenterContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="controls/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="controls/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TextureRect" type="TextureRect" parent="controls/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("27_q05j2")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="controls/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("28_ars2s")
stretch_mode = 3

[node name="TextureRect3" type="TextureRect" parent="controls/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("29_r6hki")
stretch_mode = 3

[node name="TextureRect4" type="TextureRect" parent="controls/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
stretch_mode = 3

[node name="TextureRect5" type="TextureRect" parent="controls/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
stretch_mode = 3

[node name="back" type="TextureButton" parent="controls/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("19_lec1t")
texture_hover = ExtResource("20_jtdhh")
stretch_mode = 3

[node name="ParallaxBackground" parent="." instance=ExtResource("32_a7rpd")]

[connection signal="pressed" from="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer/new game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer/stage select" to="." method="_on_stage_select_pressed"]
[connection signal="pressed" from="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="main menu/CenterContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer/exit to desktop" to="." method="_on_exit_to_desktop_pressed"]
[connection signal="pressed" from="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer/catacombs" to="." method="_on_catacombs_pressed"]
[connection signal="pressed" from="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer/garden" to="." method="_on_garden_pressed"]
[connection signal="pressed" from="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer/library" to="." method="_on_library_pressed"]
[connection signal="pressed" from="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer/forge" to="." method="_on_forge_pressed"]
[connection signal="pressed" from="stage select/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer2/sfx slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/music slider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="options/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="controls/CenterContainer/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/MarginContainer2/VBoxContainer/back" to="." method="_on_back_pressed"]
